<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fillViewport="true"
            android:background="@color/sciot_blue_light"
            android:padding="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/framelayout_send_credential_activity_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <com.sacot41.espconnector_example.base.ESPWifiEdittextview
                    android:id="@+id/espwifiedittextview_send_credential_ssid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    app:roundHint="@string/config_activity_espssid_hint"/>

                <com.sacot41.espconnector_example.base.ESPWifiEdittextview
                    android:id="@+id/espwifiedittextview_send_credential_passphrase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    app:roundHint="@string/config_activity_esppassphrase_hint"/>

                <com.unstoppable.submitbuttonview.SubmitButton
                    android:id="@+id/submitbutton_send_credential_send"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="20dp"
                    app:progressStyle="loading"
                    app:failedColor="@color/sciot_red"
                    app:succeedColor="@color/sciot_turquoise"
                    app:buttonColor="@color/sciot_turquoise"
                    app:buttonText="@string/send_credential_send_button"/>

                <com.unstoppable.submitbuttonview.SubmitButton
                    android:id="@+id/submitbutton_send_credential_make_flash"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="20dp"
                    app:progressStyle="loading"
                    app:failedColor="@color/sciot_red"
                    app:succeedColor="@color/sciot_turquoise"
                    app:buttonColor="@color/sciot_turquoise"
                    app:buttonText="@string/send_credential_make_it_flash"/>

                <com.unstoppable.submitbuttonview.SubmitButton
                    android:id="@+id/submitbutton_send_credential_disconnect"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    app:progressStyle="loading"
                    app:failedColor="@color/sciot_red"
                    app:succeedColor="@color/sciot_turquoise"
                    app:buttonColor="@color/sciot_red"
                    app:buttonText="@string/send_credential_deconnect"/>

            </LinearLayout>

        </FrameLayout>

        <TextView
            android:id="@+id/textview_send_credential_activity_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/framelayout_send_credential_activity_config"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:textColor="@color/sciot_white"
            android:text="@string/main_activity_settings_button"/>

    </RelativeLayout>

</ScrollView>